gramatica.txt
program : regla *

regla : IDENTIFICADOR OPEN_BRACKET definicion CLOSE_BRACKET

definicion : varconf SEMICOLON

varconf : COLOR COLON colors
		| FONT_SIZE COLON SIZE
		| FONT_STYLE COLON styles
		| TEXT_ALIGN COLON alignments

colors : BLACK 
	   | RED 
	   | BLUE 
	   | GREEN
	   
styles : NORMAL 
	   | UNDERLINED 
	   | BOLD 
	   | ITALIC
	   
alignments : LEFT 
	       | RIGHT 
	       | CENTER
	       
